Also special-case fake installs.
git-svn-id: https://svn.r-project.org/R/trunk@51669 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/check.in
+++ b/src/scripts/check.in
@@ -609,7 +609,7 @@ foreach my $pkg (@ARGV) {
 		    chdir($dir);
 		    if(!(-f "Makefile") &&
 		       !(-f "Makefile.win") &&
-		       !(-f "Makefile.in" && !$opt_install)) {
+		       !(-f "Makefile.in" && $spec_install)) {
 			opendir(DIR, ".") or die "cannot opendir $dir: $!";
 			@srcfiles = grep {
 			    !(/\.$exts$/ || /^Makevars/ || /-win\.def$/ )
