add back manifests for x64 (called amd64 in manifests!)
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51719 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/front-ends/rgico.rc
+++ b/src/gnuwin32/front-ends/rgico.rc
@@ -5,6 +5,8 @@ Rgui  ICON  R.ico
 
 #ifndef Win64
 CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "Rgui.exe.manifest"
+#else
+CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "Rgui64.manifest"
 #endif
 
 VS_VERSION_INFO VERSIONINFO
