--- a/src/gnuwin32/front-ends/rtico.rc
+++ b/src/gnuwin32/front-ends/rtico.rc
@@ -5,6 +5,8 @@ Rterm  ICON  R.ico
 
 #ifndef WIN64
 CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "Rterm.exe.manifest"
+#else
+CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "Rterm64.manifest"
 #endif
 
 VS_VERSION_INFO VERSIONINFO
