- tidy up after MM's breakage - remove special rgico64.rc
git-svn-id: https://svn.r-project.org/R/trunk@51721 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/front-ends/Makefile
+++ b/src/gnuwin32/front-ends/Makefile
@@ -21,7 +21,6 @@ LARGE_ADDR=-Wl,--large-address-aware
 endif
 
 rcmdfn-CFLAGS=-DBINDIR='"$(BINDIR)"'
-Rfe-CFLAGS=-DR_ARCH='"$(R_ARCH)"'
 
 .PHONY : all makeMakedeps
 
@@ -82,10 +81,10 @@ rcico.o: Rcmd.exe.manifest
 rgico.o: Rgui.exe.manifest
 rtico.o: Rterm.exe.manifest
 else
-Rgui.exe: rgui.o rgico64.o
+Rgui.exe: rgui.o rgico.o
 Rterm.exe: rterm.o rtico.o
 rtico.o: Rterm64.manifest
-rgico64.o: Rgui64.manifest
+rgico.o: Rgui64.manifest
 endif
 
 Rcmd.exe: rcmd.o ../rhome.o ../shext.o rcico.o rcmdfn.o Renviron.o
