add reference output for some base packages
git-svn-id: https://svn.r-project.org/R/trunk@51723 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/tests/Examples/Makefile.in
+++ b/tests/Examples/Makefile.in
@@ -22,10 +22,9 @@ Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 
 test-Examples: test-Examples-Base
 
-## Should this go and update the R-ex directories?  It used to ...
 ## Who does make check but not make? -- maybe better to check what was made.
 test-Examples-Base: Makefile
-	@$(ECHO) "tools::testInstalledPackages(scope='base', types='examples')" | $(R_EXE)
+	@$(ECHO) "tools::testInstalledPackages(scope='base', types='examples', srcdir=\"$(srcdir)\")" | $(R_EXE)
 
 
 ## <NOTE>
