--- a/src/extra/zlib/Makefile.win
+++ b/src/extra/zlib/Makefile.win
@@ -3,8 +3,10 @@ include ../../gnuwin32/MkRules
 
 all: makeMakedeps DLL implib headers
 
-SOURCES = adler32.c compress.c crc32.c deflate.c gzio.c infback.c \
-  inffast.c inflate.c inftrees.c trees.c uncompr.c zutil.c
+SOURCES = adler32.c compress.c crc32.c deflate.c infback.c \
+  inffast.c inflate.c inftrees.c trees.c uncompr.c zutil.c \
+  gzclose.c gzlib.c gzread.c gzwrite.c
+
 OBJECTS = $(SOURCES:.c=.o)
 
 CFLAGS=-I../../include -DHAVE_CONFIG_H $(OPTFLAGS)
