--- a/tests/Makefile.win
+++ b/tests/Makefile.win
@@ -32,8 +32,8 @@ ECHO_T =
 MK = $(MAKE) -f Makefile.win
 TAR = tar
 
-test-src-reg-1 = reg-tests-1.R reg-tests-2.R reg-IO.R reg-IO2.R \
-  reg-plot.R reg-S4.R reg-win.R
+test-src-reg-1 = reg-examples.R reg-tests-1.R reg-tests-2.R \
+  reg-IO.R reg-IO2.R reg-plot.R reg-S4.R reg-win.R
 
 all-basic-tests = Examples Specific Reg Internet
 all-devel-tests = Docs IsAs Random Demo Primitive Regexp Segfault \
