--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -23,10 +23,10 @@ Producer = R-core
 
 ## Limit installation to 64-bit systems
 ifeq ($(strip $(WIN)),64)
-bit64 = 1;
+bit64 = 1
 SUFF = win64
 else
-bit64 = 0;
+bit64 = 0
 SUFF = win32
 endif
 
@@ -111,7 +111,7 @@ md5sums:
 
 fixups:
 	echo "make.packages.html(.Library, verbose=FALSE)" | $(RPREFIX)/$(BINDIR)/Rterm.exe --vanilla --slave LC_COLLATE=C
-	$(CP) -pr "$(TCL_HOME)" $(RPREFIX)
+	$(CP) -prf "$(TCL_HOME)" $(RPREFIX)
 	$(RM) $(RPREFIX)/Tcl*/lib/*.lib
 
 32bit:
@@ -119,9 +119,10 @@ ifeq ($(strip $(WIN)),64)
 ifneq ($(strip $(HOME32)),)
 	@echo "including 32-bit files"
 	(cd $(HOME32); zip -qr9X 32bit */i386 library/*/libs/i386 bin/R.exe)
-	unzip -q $(HOME32)/32bit -d $(RPREFIX)
+	unzip -qo $(HOME32)/32bit -d $(RPREFIX)
 	rm $(HOME32)/32bit.zip
-	cp -pr $(HOME32)/Tcl $(RPREFIX)
+	mkdir -p $(RPREFIX)/Tcl
+	$(CP) -prf $(HOME32)/Tcl/bin $(HOME32)/Tcl/lib $(RPREFIX)/Tcl
 else
 	@echo "not including 32-bit files"
 endif
@@ -129,7 +130,7 @@ endif
 
 ## for Inno Setup installer
 
-R.iss: JRins.pl CustomMsg.txt imagedir 32bit fixups md5sums \
+R.iss: JRins.pl CustomMsg.txt imagedir fixups 32bit md5sums \
   ../../../VERSION ../../../SVN-REVISION
 	$(PERL) JRins.pl $(RPREFIX) $(RPREFIX) $(MDISDI) $(HelpStyle) $(Internet) $(Producer) $(bit64)
 
