--- a/src/scripts/Makefile.win
+++ b/src/scripts/Makefile.win
@@ -26,23 +26,19 @@ $(R_HOME)/$(SCRIPTDIR)/Rprof.pl: Rprof.in
 	@$(SED) -e 1d $< > $@
 
 $(R_HOME)/$(SCRIPTDIR)/Rdconv.sh: Rdconv
-	@$(SED) -e "s|/bin/R|/$(BINDIR)/R|" $< > $@
+	@$(SED) -e 's|/bin/R|/${BINDIR}/R|' $< > $@
 
 $(R_HOME)/$(SCRIPTDIR)/Rd2dvi.sh: Rd2dvi
-	@$(SED) -e "s|/bin/|/$(BINDIR)/|" $< > $@
+	@$(SED) -e 's|/bin/R|/${BINDIR}/R|' $< > $@
 
 $(R_HOME)/$(SCRIPTDIR)/config.sh: config
-ifeq ($(strip $(WIN)),64)
-	@$(SED) -e "s|R_ARCH=|R_ARCH=$(R_ARCH)|" $< > $@
-else
 	@cp $< $@
-endif
 
 $(R_HOME)/$(SCRIPTDIR)/SHLIB.sh: SHLIB
-	@$(SED) -e "s|/bin/R|/$(BINDIR)/R|" $< > $@
+	@$(SED) -e 's|/bin/R|/${BINDIR}/R|' $< > $@
 
 $(R_HOME)/$(SCRIPTDIR)/Stangle.sh: Stangle
-	@$(SED) -e "s|/bin/R|/$(BINDIR)/R|" $< > $@
+	@$(SED) -e 's|/bin/R|/${BINDIR}/R|' $< > $@
 
 $(R_HOME)/$(SCRIPTDIR)/Sweave.sh: Sweave
-	@$(SED) -e "s|/bin/R|/$(BINDIR)/R|" $< > $@
+	@$(SED) -e 's|/bin/R|/${BINDIR}/R|' $< > $@
