Set up for combined 32/64 build
git-svn-id: https://svn.r-project.org/R/trunk@51874 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -399,7 +399,7 @@ endif
 crandir:
 	$(CP) CHANGES cran/CHANGES.$(RPREFIX)
 	$(CP) ../../NEWS cran/NEWS.$(RPREFIX)
-	$(CP) installer/$(RPREFIX)-win$(BITSIZE).exe cran
+	$(CP) installer/$(RPREFIX)-win*.exe cran
 	(cd cran;\
 	 $(ECHO) 'cat(md5sum("$(RPREFIX)-win$(BITSIZE).exe"),"*$(RPREFIX)-win$(BITSIZE).exe")' \
          | $(REXE) R_DEFAULT_PACKAGES=tools >md5sum.txt)
