--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -117,14 +117,14 @@ fixups:
 32bit:
 ifeq ($(strip $(WIN)),64)
 ifneq ($(strip $(HOME32)),)
-	@echo "including 32-bit files"
+	@echo "------------ including 32-bit files"
 	(cd $(HOME32); zip -qr9X 32bit */i386 library/*/libs/i386 bin/R.exe)
 	unzip -qo $(HOME32)/32bit -d $(RPREFIX)
 	rm $(HOME32)/32bit.zip
 	mkdir -p $(RPREFIX)/Tcl
 	$(CP) -prf $(HOME32)/Tcl/bin $(HOME32)/Tcl/lib $(RPREFIX)/Tcl
 else
-	@echo "not including 32-bit files"
+	@echo "------------ not including 32-bit files"
 endif
 endif
 
