split out into files in preparation for migrating to R code
git-svn-id: https://svn.r-project.org/R/trunk@51883 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -131,7 +131,8 @@ endif
 
 ## for Inno Setup installer
 
-R.iss: JRins.pl CustomMsg.txt imagedir fixups 32bit md5sums \
+R.iss: JRins.pl header1.iss types3264.iss types32.iss types64.iss code.iss \
+   CustomMsg.txt imagedir fixups 32bit md5sums \
   ../../../VERSION ../../../SVN-REVISION
 	$(PERL) JRins.pl $(RPREFIX) $(RPREFIX) $(MDISDI) $(HelpStyle) $(Internet) $(Producer)
 
