--- a/doc/manual/Makefile.in
+++ b/doc/manual/Makefile.in
@@ -241,7 +241,7 @@ version.texi: Makefile $(top_srcdir)/VERSION $(top_builddir)/SVN-REVISION
 	  $(ECHO) "@set VERSIONno $${v}" > $@; \
 	  v="$${v} (`sed -e 1d -e 's/^Last Changed Date: //' $(top_builddir)/SVN-REVISION`)"; \
 	  $(ECHO) "@set VERSION $${v}" >> $@; \
-	  rwv=`$(PERL) $(top_srcdir)/src/gnuwin32/fixed/rwver.pl $(top_srcdir)/VERSION`; \
+	  rwv=`$(SHELL) $(top_srcdir)/tools/GETRWVERSION $(top_srcdir)/VERSION`; \
 	  $(ECHO) "@set RWVERSION $${rwv}" >> $@ )
 	@if test "$(R_PAPERSIZE)" = "a4"; then \
 	  $(ECHO) "@afourpaper" >> $@ ; \
