remove use of rwver.pl on Windows too
git-svn-id: https://svn.r-project.org/R/trunk@51889 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -39,7 +39,7 @@ RHOME = $(shell ./Rpwd.exe ../..)
 
 REXE = $(RHOME)/$(BINDIR)/rterm.exe --vanilla --slave
 
-RPREFIX = $(shell $(PERL) fixed/rwver.pl ../../VERSION)
+RPREFIX = $(shell ../../tools/GETRWVERSION ../../VERSION)
 
 FULLVERSION=`cat ../../VERSION`
 
