--- a/src/gnuwin32/front-ends/Makefile
+++ b/src/gnuwin32/front-ends/Makefile
@@ -27,8 +27,9 @@ rcmdfn-CFLAGS=-DBINDIR='"$(BINDIR)"'
 all: makeMakedeps \
      $(R_HOME)/$(BINDIR)/Rgui.exe $(R_HOME)/$(BINDIR)/Rterm.exe \
      $(R_HOME)/$(BINDIR)/Rcmd.exe  $(R_HOME)/$(BINDIR)/RSetReg.exe  \
-     $(R_HOME)/$(BINDIR)/R.exe $(R_HOME)/bin/R.exe \
-     $(R_HOME)/$(BINDIR)/Rscript.exe $(R_HOME)/$(BINDIR)/open.exe 
+     $(R_HOME)/$(BINDIR)/R.exe\
+     $(R_HOME)/$(BINDIR)/Rscript.exe $(R_HOME)/$(BINDIR)/open.exe \
+     $(R_HOME)/bin/R.exe $(R_HOME)/bin/Rscript.exe 
 
 $(R_HOME)/$(BINDIR)/Rgui.exe: Rgui.exe
 	$(MKDIR) -p $(R_HOME)/$(BINDIR)
@@ -51,6 +52,10 @@ $(R_HOME)/$(BINDIR)/R.exe: R.exe
 	$(CP) $^ $@	
 
 $(R_HOME)/bin/R.exe: Rfe.exe
+	$(MKDIR) -p $(R_HOME)/bin
+	$(CP) $^ $@	
+
+$(R_HOME)/bin/Rscript.exe: Rfe.exe
 	$(MKDIR) -p $(R_HOME)/bin
 	$(CP) $^ $@	
 
