use R code for RPREFIX
git-svn-id: https://svn.r-project.org/R/trunk@51899 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/Makefile.win
+++ b/doc/manual/Makefile.win
@@ -253,7 +253,7 @@ version.texi: Makefile.win $(top_srcdir)/VERSION $(top_srcdir)/SVN-REVISION
 	  $(ECHO) "@set VERSIONno $${v}" > $@; \
 	  v="$${v} (`sed -e 1d -e 's/^Last Changed Date: //' $(top_srcdir)/SVN-REVISION`)"; \
 	  $(ECHO) "@set VERSION $${v}" >> $@; \
-	  rwv=$(shell $(top_srcdir)/tools/GETRWVERSION $(top_srcdir)/VERSION); \
+	  rwv=$(shell ../../bin$(R_ARCH)/Rscript ../../src/gnuwin32/fixed/rwver.R); \
 	  $(ECHO) "@set RWVERSION $${rwv}" >> $@ )
 	@if test "$(R_PAPERSIZE)" = "a4"; then \
 	  $(ECHO) "@afourpaper" >> $@ ; \
