--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -18,7 +18,7 @@ all:
 	@$(MK) rbuild
 	@$(MK) -C ../library -f Makefile.win all WIN=$(WIN)
 	@$(MK) -C ../library -f Makefile.win docs
-	@$(MK) htmldocs
+	@$(MK) htmldocs docfiles
 	@$(MK)  -C ../../po -f Makefile.win
 
 rpackages:
@@ -128,7 +128,7 @@ COPYRIGHTS: ../../doc/COPYRIGHTS COPYRIGHTS.win
 	cat $^ > $@
 
 
-fixfiles: docfiles 
+fixfiles: 
 	@$(MKDIR) -p ../../$(BINDIR) ../../bin
 	@$(MK) -C ./fixed
 
