clean up after sub-arch builds
git-svn-id: https://svn.r-project.org/R/trunk@51907 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/build.in
+++ b/src/scripts/build.in
@@ -302,6 +302,10 @@ foreach my $pkg (@ARGV) {
     }
 
     &fix_unneeded_dirs($pkgname);
+    ## remove subarch build directories
+    foreach my $d ("src-i386", "src-x64", "src-x86_64", "src-ppc") {
+	rmtree(&file_path($pkgname, $d)); 
+    }
 
     ## Finalize.
     if($opt_binary) {
