--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -76,7 +76,7 @@ clean:
 	  (cd $${d} && $(MAKE) $@); \
 	done
 	-@rm -f stamp-R Makedeps Rplot* Rprof.out data dumpdata.R \
-	  reg-plot-latin1.ps reg-plot.ps reg-tests-?.ps \
+	  reg-plot-latin1.ps reg-plot.ps reg-tests-*.ps \
 	  R-exts.* R-intro.R R-intro.Rout \
 	  FALSE* .R .tex mirrors.html PACKAGES*
 	-@rm -f testit.txt testit.html testit.tex testit-Ex.R
