--- a/tests/Makefile.win
+++ b/tests/Makefile.win
@@ -63,7 +63,7 @@ test-Standalone:
 
 clean:
 	@rm -f *.Rout *.Rout.fail internet.Rout2 Rplots.ps reg-plot.ps \
-	  reg-plot-latin1.ps reg-tests-?.ps \
+	  reg-plot-latin1.ps reg-tests-*.ps \
 	  $(test-src-auto) R-exts.* R-exts_res.rc R-intro.R Makedeps
 	@rm -rf *.Rcheck myTst* myLib Rprofmem.out
 	@rm -f FALSE* PACKAGES* .R .tex mirrors.html Rplots*.pdf
