finish switching GETRWVERSION to R code
git-svn-id: https://svn.r-project.org/R/trunk@51941 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -13,7 +13,7 @@ include $(top_builddir)/Makeconf
 distdir = $(top_builddir)/$(PACKAGE)-$(VERSION)/$(subdir)
 DISTFILES = README \
 	Makefile.in \
-	GETCONFIG GETDISTNAME GETMAKEVAL GETRWVERSION GETVERSION \
+	GETCONFIG GETDISTNAME GETMAKEVAL GETVERSION \
 	config.guess \
 	config.rpath \
 	config.sub \
