--- a/src/gnuwin32/cran/rpatched.in
+++ b/src/gnuwin32/cran/rpatched.in
@@ -33,17 +33,17 @@
 
 <body>
 
-<h1>R-@FULLVERSION@ build for Windows (@BITSIZE@ bit)</h1>
+<h1>R-@FULLVERSION@ build for Windows (32/64 bit)</h1>
 
 <div class="download">
-  <p><a href="@RWVER@-win@BITSIZE@.exe">Download R-@FULLVERSION@ build for Windows</a> <span>(33 megabytes, @BITSIZE@ bit)</span></p>
+  <p><a href="@RWVER@-win.exe">Download R-@FULLVERSION@ build for Windows</a> <span>(37 megabytes, 32/64 bit)</span></p>
   <ul>
     <li><a href="../../windows/base/README.@RWVER@">Installation and other instructions</a></li>
     <li>New features in this version: <a href="../../windows/base/CHANGES.@RWVER@">Windows specific</a>, <a href="../../windows/base/NEWS.@RWVER@">all platforms</a>.</li>
   </ul>
 </div>
 
-<p>This is a Windows @BITSIZE@ bit binary build of R including
+<p>This is a combined Windows 32/64 bit binary build R including
 patches up to @DATE@ (r@SVNREVISION@).</p>
 
 <p>This is not an official release of R. Please check bugs
@@ -69,7 +69,6 @@ FAQ</a> for Windows-specific information.</p>
   <li><a href="index.html">The current official release.</a></li>
   <li>A build of the development version (which will eventually become
 the next major release of R) is available in the <a href="../../windows/base/rdevel.html">r-devel snapshot build</a>.
-  <li><a href="../../windows@OTHERBITSUFFIX@/base">@OTHERBITSIZE@ bit builds for Windows</a></li>
   <li><a href="../../windows/base/old/">Previous releases</a></li>
 </ul>
 
