set up src/gnuwin32/crandir only from 64-bit builds
git-svn-id: https://svn.r-project.org/R/trunk@51982 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -356,7 +356,9 @@ rinstaller:
 	@$(MAKE) -C installer clean
 
 crandir:
+ifeq ($(strip $(WIN)),64)
 	$(MAKE) -C cran all
+endif
 
 distribution:
 	@$(MK) all
