prefer gnutar to work around Mac OS X perfidity
git-svn-id: https://svn.r-project.org/R/trunk@52055 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/configure.ac
+++ b/configure.ac
@@ -545,7 +545,7 @@ R_PROG_PAGER
 ## Perl
 R_PROG_PERL
 ## Tar -- we prefer a GNU version
-AC_PATH_PROGS(TAR, [${TAR} gtar tar], "")
+AC_PATH_PROGS(TAR, [${TAR} gtar gnutar tar], "")
 ## TeXMF stuff
 R_PROG_TEXMF
 ## Unzip && zip && gzip && bip2
