--- a/etc/Renviron.in
+++ b/etc/Renviron.in
@@ -14,7 +14,7 @@ R_PRINTCMD=${R_PRINTCMD-'@R_PRINTCMD@'}
 R_LATEXCMD=${R_LATEXCMD-${LATEX-'@LATEXCMD@'}}
 R_PDFLATEXCMD=${R_PDFLATEXCMD-${PDFLATEX-'@PDFLATEXCMD@'}}
 R_DVIPSCMD=${R_DVIPSCMD-${DVIPS-'@DVIPSCMD@'}}
-R_MAKEINDEXCMD=${R_MAKEINDEXCMD-${MAKEINDEX-'@MAKEINDEXCMD@'}}
+MAKEINDEX=${MAKEINDEX-'@MAKEINDEXCMD@'}
 R_TEXI2DVICMD=${R_TEXI2DVICMD-${TEXI2DVI-'@TEXI2DVICMD@'}}
 R_RD4DVI=${R_RD4DVI-'@R_RD4DVI@'}
 R_RD4PDF=${R_RD4PDF-'@R_RD4PDF@'}
