do not set R_*CMD that we no longer use
git-svn-id: https://svn.r-project.org/R/trunk@52122 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/Makefile.in
+++ b/doc/manual/Makefile.in
@@ -31,7 +31,7 @@ OBJECTS_HTML = $(SOURCES_TEXI:.texi=.html)
 OBJECTS_INFO = $(SOURCES_TEXI:.texi=.info)
 OBJECTS_PDF = $(SOURCES_TEXI:.texi=.pdf)
 
-MAKEINDEX = @MAKEINDEXCMD@
+MAKEINDEX = @MAKEINDEX@
 MAKEINFO = @MAKEINFO@
 MAKEINFO_HTML_OPTS = --html --no-split --css-include=$(srcdir)/Rman.css
 MAKEINFO_TEXT_OPTS = --number-sections --fill-column=76 --no-split --no-headers
