--- a/src/scripts/Makefile.in
+++ b/src/scripts/Makefile.in
@@ -12,7 +12,7 @@ include $(top_builddir)/Makeconf
 
 ## don't add '#! R_SHELL' for scripts intend to be run by 'R CMD script'
 SCRIPTS_S = BATCH COMPILE INSTALL LINK REMOVE Rd2dvi Rdconv \
-  SHLIB Stangle Sweave config javareconf rtags
+  SHLIB Stangle Sweave config javareconf rtags nbuild
 ## <NOTE>
 ## Need target rules for all elements of SCRIPTS_B_IN/SCRIPTS_B.
 SCRIPTS_B_IN = Rcmd.in Rdiff.in Rprof.in Sd2Rd.in \
